Fixed typo in SEAL example.

--- a/3_levels.ipynb
+++ b/3_levels.ipynb
@@ -301,7 +301,7 @@
     "print(\"Perform modulus switching on encrypted and print.\")\n",
     "context_data = context.first_context_data()\n",
     "print(\"--->\")\n",
-    "while context_data.next_context_dat]a():\n",
+    "while context_data.next_context_data():\n",
     "    print(\"Level (chain index): \" + str(context_data.chain_index()))\n",
     "    print(\"\\tparms_id of encrypted: \" + str(encrypted.parms_id()))\n",
     "    print(\"\\tNoise budget at this level: \" + str(decryptor.invariant_noise_budget(encrypted)) + \" bits\")\n",
