Explanation of scale management added. Disadvantage of bad_copy illustrated in final code segment.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -32,18 +32,18 @@
       "/\n",
       "|Encryption parameters: \n",
       "|\tscheme: CKKS\n",
-      "|\tpoly_modulus_degree: 16384\n",
-      "|\tcoeff_modulus_size: 320 (60 40 40 40 40 40 60) bits\n",
-      "|\t Max Bit Count: 438\n"
+      "|\tpoly_modulus_degree: 8192\n",
+      "|\tcoeff_modulus_size: 216 (48 30 30 30 30 48) bits\n",
+      "|\t Max Bit Count: 218\n"
      ]
     }
    ],
    "source": [
     "parms = seal.EncryptionParameters(seal.SCHEME_TYPE.CKKS)\n",
-    "poly_modulus_degree = 8192*2\n",
+    "poly_modulus_degree = 8192\n",
     "parms.set_poly_modulus_degree(poly_modulus_degree)\n",
-    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [60, 40,40,40,40,40, 60]))\n",
-    "scale = pow(2.0, 40)\n",
+    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [48, 30,30,30,30, 48]))\n",
+    "scale = pow(2.0, 30)\n",
     "\n",
     "context = seal.SEALContext(parms,True,seal.SEC_LEVEL_TYPE.TC128)\n",
     "\n",
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of slots: 8192\n"
+      "Number of slots: 4096\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Worst way of copying a ciphertext - multiply by plaintext 1. Consumes one modulus level. \n",
+    "# Worst way of copying a ciphertext - multiply by plaintext 1. Consumes one ciphertext level. \n",
     "def bad_copy(cipher : seal.Ciphertext,scale : int, evaluator  : seal.Evaluator, encoder : seal.CKKSEncoder):\n",
     "    dummy_plain = seal.Plaintext()\n",
     "    encoder.encode(1, scale, dummy_plain)\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -219,9 +219,9 @@
      "output_type": "stream",
      "text": [
       "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.296000E-01\n",
+      "Encrypted result is: 1.295977E-01\n",
       "True result is: 1.296000E-01\n",
-      "Error is: -3.6772E-10\n"
+      "Error is: -2.2931E-06\n"
      ]
     }
    ],
@@ -245,15 +245,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First data level parms_id():\n",
+      "[18259146303829517197, 2717024717074511681, 5177233785204715965, 5297493819697097810]\n",
+      "Original parms_id():\n",
+      "[18259146303829517197, 2717024717074511681, 5177233785204715965, 5297493819697097810]\n",
+      "Copy parms_id():\n",
+      "[14852657763212259863, 5686680545112440809, 4097547795642105535, 10867004227867429147]\n",
+      "Modulus switch original parms_id():\n",
+      "[14852657763212259863, 5686680545112440809, 4097547795642105535, 10867004227867429147]\n",
+      "Modulus switched scale: \n",
+      "1073741824.0\n",
+      "Primes in the coefficient modulus chain:\n",
+      "[281474976546817, 1073430529, 1073479681, 1073643521, 1073692673, 281474976694273]\n",
+      "Original scale\n",
+      "1073741824.0\n",
+      "Copy scale\n",
+      "1073790977.2500114\n",
+      "Product scale:\n",
+      "1.1529742825071698e+18\n",
+      "Product scale after rescale:\n",
+      "1073889293.751133\n",
+      "1073889293.751133\n",
+      "-0.6000002898297523\n",
+      "-0.600000293212692\n"
+     ]
+    }
+   ],
    "source": [
-    "# Test copy\n",
+    "# Test bad_copy\n",
     "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
     "\n",
-    "print(x_enc)\n",
-    "print(x_copy)\n",
+    "print(\"First data level parms_id():\")\n",
+    "print(context.first_parms_id())\n",
+    "print(\"Original parms_id():\")\n",
+    "print(x_enc.parms_id())\n",
+    "# Note that the parms_id() of the copy shows that this ciphertext\n",
+    "# is a level lower than the original. \n",
+    "print(\"Copy parms_id():\")\n",
+    "print(x_copy.parms_id())\n",
+    "\n",
+    "# Print scale of original for later comparison\n",
+    "print(\"Original scale\")\n",
+    "print(x_enc.scale)\n",
+    "\n",
+    "# Copy is at different level from original, this\n",
+    "# can be changed with modulus switching, effectively\n",
+    "# wasting one ciphertext level.  \n",
+    "print(\"Modulus switch original parms_id():\")\n",
+    "evaluator.mod_switch_to_next_inplace(x_enc)\n",
+    "print(x_enc.parms_id())\n",
+    "\n",
+    "# Modulus switching does not change the scale\n",
+    "print(\"Modulus switched scale: \")\n",
+    "print(x_enc.scale)\n",
+    "\n",
+    "# What are the specific primes in the modulus chain? \n",
+    "print(\"Primes in the coefficient modulus chain:\")\n",
+    "modulus_chain = [modulus.value() for modulus in parms.coeff_modulus()]\n",
+    "print(modulus_chain)\n",
+    "\n",
+    "# What is the exact scale of the copied ciphertext?\n",
+    "print(\"Copy scale\")\n",
+    "print(x_copy.scale)\n",
+    "\n",
+    "# What happens when we operate on original and copy, \n",
+    "# for illustration purposes only.\n",
+    "test = seal.Ciphertext()\n",
+    "evaluator.multiply(x_copy, x_enc, test)\n",
+    "\n",
+    "# Scale has now grown \n",
+    "print(\"Product scale:\")\n",
+    "print(test.scale)\n",
+    "\n",
+    "# and we want to rescale\n",
+    "evaluator.rescale_to_next_inplace(test)\n",
+    "print(\"Product scale after rescale:\")\n",
+    "print(test.scale)\n",
+    "\n",
+    "# Note that the exact scale of the new rescaled product\n",
+    "# which happens to be the square of the original cipher is\n",
+    "# exactly the scale of the original (scale) times the scale\n",
+    "# copy (scale**2)/modulus_chain[-2], which is then rescaled\n",
+    "# (divided by the next prime in the chain), modulus_chain[-3]\n",
+    "print(scale**3/modulus_chain[-2]/modulus_chain[-3])\n",
     "\n",
     "tmp_result = seal.Plaintext()\n",
     "decryptor.decrypt(x_copy, tmp_result)\n",
@@ -261,6 +342,13 @@
     "decryptor.decrypt(x_enc, tmp_result)\n",
     "print(encoder.decode_double(tmp_result)[0])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
