Removed unnecessary imports.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,20 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tenseal.sealapi as seal\n",
     "import util\n",
-    "import compare_util as cu\n",
-    "from math import log2,ceil\n",
-    "import ctypes"
+    "from math import log2,ceil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +31,7 @@
       "|Encryption parameters: \n",
       "|\tscheme: CKKS\n",
       "|\tpoly_modulus_degree: 8192\n",
-      "|\tcoeff_modulus_size: 216 (48 30 30 30 30 48) bits\n",
+      "|\tcoeff_modulus_size: 218 (49 30 30 30 30 49) bits\n",
       "|\t Max Bit Count: 218\n"
      ]
     }
@@ -42,7 +40,7 @@
     "parms = seal.EncryptionParameters(seal.SCHEME_TYPE.CKKS)\n",
     "poly_modulus_degree = 8192\n",
     "parms.set_poly_modulus_degree(poly_modulus_degree)\n",
-    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [48, 30,30,30,30, 48]))\n",
+    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [49, 30,30,30,30, 49]))\n",
     "scale = pow(2.0, 30)\n",
     "\n",
     "context = seal.SEALContext(parms,True,seal.SEC_LEVEL_TYPE.TC128)\n",
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,12 +188,17 @@
     "        else:\n",
     "            evaluator.square_inplace(cipher)\n",
     "            relinearize_and_rescale_inplace(cipher,evaluator, relin_keys)\n",
-    "            evaluator.mod_switch_to_next_inplace(res)\n"
+    "            evaluator.mod_switch_to_next_inplace(res)\n",
+    "\n",
+    "# Divide by power of 2, divides cipher by 2**power\n",
+    "def divByPo2(cipher: seal.Ciphertext, power : int):\n",
+    "    cipher.scale = cipher.scale/2**power\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -253,19 +256,19 @@
      "output_type": "stream",
      "text": [
       "First data level parms_id():\n",
-      "[18259146303829517197, 2717024717074511681, 5177233785204715965, 5297493819697097810]\n",
+      "[18132249767353198549, 718253398100440172, 8509878810699523384, 11073798577702196591]\n",
       "Original parms_id():\n",
-      "[18259146303829517197, 2717024717074511681, 5177233785204715965, 5297493819697097810]\n",
+      "[18132249767353198549, 718253398100440172, 8509878810699523384, 11073798577702196591]\n",
       "Copy parms_id():\n",
-      "[14852657763212259863, 5686680545112440809, 4097547795642105535, 10867004227867429147]\n",
+      "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
+      "Original scale\n",
+      "1073741824.0\n",
       "Modulus switch original parms_id():\n",
-      "[14852657763212259863, 5686680545112440809, 4097547795642105535, 10867004227867429147]\n",
+      "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
       "Modulus switched scale: \n",
       "1073741824.0\n",
       "Primes in the coefficient modulus chain:\n",
-      "[281474976546817, 1073430529, 1073479681, 1073643521, 1073692673, 281474976694273]\n",
-      "Original scale\n",
-      "1073741824.0\n",
+      "[562949952798721, 1073430529, 1073479681, 1073643521, 1073692673, 562949952847873]\n",
       "Copy scale\n",
       "1073790977.2500114\n",
       "Product scale:\n",
@@ -273,8 +276,8 @@
       "Product scale after rescale:\n",
       "1073889293.751133\n",
       "1073889293.751133\n",
-      "-0.6000002898297523\n",
-      "-0.600000293212692\n"
+      "-0.5999988728593582\n",
+      "-0.5999996029724907\n"
      ]
     }
    ],
@@ -298,7 +301,7 @@
     "# Copy is at different level from original, this\n",
     "# can be changed with modulus switching, effectively\n",
     "# wasting one ciphertext level.  \n",
-    "print(\"Modulus switch original parms_id():\")\n",
+    "print(\"Modulus switched original parms_id():\")\n",
     "evaluator.mod_switch_to_next_inplace(x_enc)\n",
     "print(x_enc.parms_id())\n",
     "\n",
@@ -345,17 +348,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "divByPo2 result: \n",
+      "-1.1999995412032474\n",
+      "\n",
+      "True value: \n",
+      "-0.30000000000000004\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test divByPo2\n",
+    "# Fresh ciphertext \n",
+    "x_enc = seal.Ciphertext()\n",
+    "encryptor.encrypt(x_plain, x_enc)\n",
+    "\n",
+    "power = 1\n",
+    "divByPo2(x_enc, 1)\n",
+    "test_plain = seal.Plaintext()\n",
+    "decryptor.decrypt(x_enc, test_plain)\n",
+    "print(\"divByPo2 result: \")\n",
+    "print(encoder.decode_double(test_plain)[0])\n",
+    "\n",
+    "print(\"\\nTrue value: \")\n",
+    "print(x/2**power)\n"
+   ]
   }
  ],
  "metadata": {
