Added divByPo2 algorithm. This function basically just manually sets the scale to be 2^power its "true" value, effectively leading to a division by 2^power of the plaintext upon decryption and decoding.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,13 +141,13 @@
    "source": [
     "Polynomial approximations of the comparison function using polynomials f_3(x), g_3(x) from \"Efficient Sorting of Homomorphic Encrypted Data with k-way Sorting Network\". Note that the argument to the function in this case will be the encrypted `difference`between $a$ and $b$, i.e., $a-b$. \n",
     "\n",
-    "* g_3(x) = (35x-35x^3+21x^5-5x^7)/2^4\n",
+    "* $g_3(x) = (35x-35x^3+21x^5-5x^7)/2^4$\n",
     "\n",
-    "* f_3(x) = (4589x-16577x^3+25614x^5-12860x^7)/2^10\n",
+    "* $f_3(x) = (4589x-16577x^3+25614x^5-12860x^7)/2^{10}$\n",
     "\n",
     "Comparison function is implemented in the paper as\n",
     "\n",
-    "* (x>y) := $(f_3^{(d_f)}\\circ g_3^{(d_g)}(x-y) + 1)/2$\n",
+    "* $(x>y) := (f_3^{(d_f)}\\circ g_3^{(d_g)}(x-y) + 1)/2$\n",
     "\n",
     "$d_g$ and $d_f$ are not specified in the paper. Will begin testing with $d_f=d_g=1$. \n",
     "\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +192,13 @@
     "\n",
     "# Divide by power of 2, divides cipher by 2**power\n",
     "def divByPo2(cipher: seal.Ciphertext, power : int):\n",
-    "    cipher.scale = cipher.scale/2**power\n",
+    "    cipher.scale = cipher.scale*2**power\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -222,9 +222,9 @@
      "output_type": "stream",
      "text": [
       "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.295977E-01\n",
+      "Encrypted result is: 1.296005E-01\n",
       "True result is: 1.296000E-01\n",
-      "Error is: -2.2931E-06\n"
+      "Error is: 4.5508E-07\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
       "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
       "Original scale\n",
       "1073741824.0\n",
-      "Modulus switch original parms_id():\n",
+      "Modulus switched original parms_id():\n",
       "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
       "Modulus switched scale: \n",
       "1073741824.0\n",
@@ -276,8 +276,8 @@
       "Product scale after rescale:\n",
       "1073889293.751133\n",
       "1073889293.751133\n",
-      "-0.5999988728593582\n",
-      "-0.5999996029724907\n"
+      "-0.5999998533143299\n",
+      "-0.5999998865881809\n"
      ]
     }
    ],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
      "output_type": "stream",
      "text": [
       "divByPo2 result: \n",
-      "-1.1999995412032474\n",
+      "-0.3000000232564772\n",
       "\n",
       "True value: \n",
       "-0.30000000000000004\n"
