--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +192,13 @@
     "\n",
     "# Divide by power of 2, divides cipher by 2**power\n",
     "def divByPo2(cipher: seal.Ciphertext, power : int):\n",
-    "    cipher.scale = cipher.scale*2**power\n",
+    "    cipher.scale = cipher.scale*(2**power)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -222,9 +222,9 @@
      "output_type": "stream",
      "text": [
       "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.296005E-01\n",
+      "Encrypted result is: 1.295978E-01\n",
       "True result is: 1.296000E-01\n",
-      "Error is: 4.5508E-07\n"
+      "Error is: -2.1549E-06\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -261,14 +261,17 @@
       "[18132249767353198549, 718253398100440172, 8509878810699523384, 11073798577702196591]\n",
       "Copy parms_id():\n",
       "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
+      "\n",
       "Original scale\n",
       "1073741824.0\n",
       "Modulus switched original parms_id():\n",
       "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
       "Modulus switched scale: \n",
       "1073741824.0\n",
+      "\n",
       "Primes in the coefficient modulus chain:\n",
       "[562949952798721, 1073430529, 1073479681, 1073643521, 1073692673, 562949952847873]\n",
+      "\n",
       "Copy scale\n",
       "1073790977.2500114\n",
       "Product scale:\n",
@@ -276,8 +279,8 @@
       "Product scale after rescale:\n",
       "1073889293.751133\n",
       "1073889293.751133\n",
-      "-0.5999998533143299\n",
-      "-0.5999998865881809\n"
+      "-0.5999989580435499\n",
+      "-0.5999997565026448\n"
      ]
     }
    ],
@@ -295,7 +298,7 @@
     "print(x_copy.parms_id())\n",
     "\n",
     "# Print scale of original for later comparison\n",
-    "print(\"Original scale\")\n",
+    "print(\"\\nOriginal scale\")\n",
     "print(x_enc.scale)\n",
     "\n",
     "# Copy is at different level from original, this\n",
@@ -310,12 +313,12 @@
     "print(x_enc.scale)\n",
     "\n",
     "# What are the specific primes in the modulus chain? \n",
-    "print(\"Primes in the coefficient modulus chain:\")\n",
+    "print(\"\\nPrimes in the coefficient modulus chain:\")\n",
     "modulus_chain = [modulus.value() for modulus in parms.coeff_modulus()]\n",
     "print(modulus_chain)\n",
     "\n",
     "# What is the exact scale of the copied ciphertext?\n",
-    "print(\"Copy scale\")\n",
+    "print(\"\\nCopy scale\")\n",
     "print(x_copy.scale)\n",
     "\n",
     "# What happens when we operate on original and copy, \n",
@@ -348,18 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "divByPo2 result: \n",
-      "-0.3000000232564772\n",
+      "Ciphertext level before divByPo2: 4\n",
+      "Ciphertext level after divByPo2: 4\n",
       "\n",
+      "divByPo2 result: \n",
+      "-0.0005859370702856982\n",
       "True value: \n",
-      "-0.30000000000000004\n"
+      "-0.0005859375000000001\n"
      ]
     }
    ],
@@ -369,14 +374,17 @@
     "x_enc = seal.Ciphertext()\n",
     "encryptor.encrypt(x_plain, x_enc)\n",
     "\n",
-    "power = 1\n",
-    "divByPo2(x_enc, 1)\n",
+    "power = 10\n",
+    "print(\"Ciphertext level before divByPo2: \" + str(context.get_context_data(x_enc.parms_id()).chain_index()))\n",
+    "divByPo2(x_enc, power)\n",
     "test_plain = seal.Plaintext()\n",
     "decryptor.decrypt(x_enc, test_plain)\n",
-    "print(\"divByPo2 result: \")\n",
+    "print(\"Ciphertext level after divByPo2: \" + str(context.get_context_data(x_enc.parms_id()).chain_index()))\n",
+    "\n",
+    "print(\"\\ndivByPo2 result: \")\n",
     "print(encoder.decode_double(test_plain)[0])\n",
     "\n",
-    "print(\"\\nTrue value: \")\n",
+    "print(\"True value: \")\n",
     "print(x/2**power)\n"
    ]
   }
