Calculate all odd powers. Calculating all powers is possiblel. Need to properly check levels of ciphertexts to make sure that they make sense. Copy is now at level 0 after it has been used in square_and_multiply.
x^3 should only consume two levels but currently also returns a level 0
ciphertext.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,33 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Fresh ciphertext (for debugging only, until I manage to make a copy of existing ciphertext)\n",
-    "a=0.2;b=0.8\n",
-    "x = a-b\n",
-    "x_plain = seal.Plaintext()\n",
-    "encoder.encode(x,scale, x_plain)\n",
-    "\n",
-    "x_enc = seal.Ciphertext()\n",
-    "encryptor.encrypt(x_plain, x_enc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.295978E-01\n",
-      "True result is: 1.296000E-01\n",
-      "Error is: -2.1549E-06\n"
+     "ename": "ValueError",
+     "evalue": "encrypted_ntt and plain_ntt parameter mismatch",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/davsv512@user.uu.se/python/SealAPI_Tutorial/comparison.ipynb Cell 11\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m encryptor\u001b[39m.\u001b[39mencrypt(dummy_plain, x7_enc)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Have to waste one level to make square_and_multiply compatible \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# copied ciphertext\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m x_copy \u001b[39m=\u001b[39m bad_copy(x_enc, scale, evaluator, encoder)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m evaluator\u001b[39m.\u001b[39mmod_switch_to_next_inplace(x7_enc)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m exponent \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m\n",
+      "\u001b[1;32m/home/davsv512@user.uu.se/python/SealAPI_Tutorial/comparison.ipynb Cell 11\u001b[0m in \u001b[0;36mbad_copy\u001b[0;34m(cipher, scale, evaluator, encoder)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m encoder\u001b[39m.\u001b[39mencode(\u001b[39m1\u001b[39m, scale, dummy_plain)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m copy \u001b[39m=\u001b[39m seal\u001b[39m.\u001b[39mCiphertext()\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m evaluator\u001b[39m.\u001b[39;49mmultiply_plain(cipher, dummy_plain, copy)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m evaluator\u001b[39m.\u001b[39mrescale_to_next_inplace(copy)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mreturn\u001b[39;00m copy\n",
+      "\u001b[0;31mValueError\u001b[0m: encrypted_ntt and plain_ntt parameter mismatch"
      ]
     }
    ],
@@ -233,9 +219,12 @@
     "encoder.encode(1, scale, dummy_plain)\n",
     "x7_enc = seal.Ciphertext()\n",
     "encryptor.encrypt(dummy_plain, x7_enc)\n",
-    "\n",
+    "# Have to waste one level to make square_and_multiply compatible \n",
+    "# copied ciphertext\n",
+    "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
+    "evaluator.mod_switch_to_next_inplace(x7_enc)\n",
     "exponent = 4\n",
-    "square_and_multiply(x_enc, exponent, evaluator, relin_keys,scale, encoder, x7_enc)\n",
+    "square_and_multiply(x_copy, exponent, evaluator, relin_keys,scale, encoder, x7_enc)\n",
     "\n",
     "plain_result = seal.Plaintext()\n",
     "decryptor.decrypt(x7_enc, plain_result)\n",
@@ -243,12 +232,80 @@
     "print(f\"Exponent is {exponent} leading to circuit with depth {ceil(log2(exponent))}\")\n",
     "print(f\"Encrypted result is: {result:.6E}\")\n",
     "print(f\"True result is: {x**exponent:.6E}\")\n",
-    "print(f\"Error is: {(result-x**exponent):.4E}\")\n"
+    "print(f\"Error is: {(result-x**exponent):.4E}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are redo to calculate all odd powers up to 7 using the `square_and_multiply` algorithm on \"copied\" ciphertexts, thereby avoiding changing the original. After calculating the powers, check the `parms_id()`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x^7 chain_index():\t0\n",
+      "x^5 chain_index():\t0\n",
+      "x^3 chain_index():\t0\n",
+      "x_copy chain_index():\t0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First x^7\n",
+    "dummy_plain = seal.Plaintext()\n",
+    "encoder.encode(1, scale, dummy_plain)\n",
+    "x7_enc = seal.Ciphertext()\n",
+    "encryptor.encrypt(dummy_plain, x7_enc)\n",
+    "# Have to waste one level to make square_and_multiply compatible \n",
+    "# copied ciphertext\n",
+    "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
+    "evaluator.mod_switch_to_next_inplace(x7_enc)\n",
+    "square_and_multiply(x_copy, 7, evaluator, relin_keys,scale, encoder, x7_enc)\n",
+    "\n",
+    "print(\"x^7 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
+    "\n",
+    "# Then x^5 \n",
+    "dummy_plain = seal.Plaintext()\n",
+    "encoder.encode(1, scale, dummy_plain)\n",
+    "x5_enc = seal.Ciphertext()\n",
+    "encryptor.encrypt(dummy_plain, x5_enc)\n",
+    "# Have to waste one level to make square_and_multiply compatible \n",
+    "# copied ciphertext\n",
+    "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
+    "evaluator.mod_switch_to_next_inplace(x5_enc)\n",
+    "square_and_multiply(x_copy, 5, evaluator, relin_keys,scale, encoder, x5_enc)\n",
+    "\n",
+    "print(\"x^5 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
+    "\n",
+    "# Now x^3\n",
+    "dummy_plain = seal.Plaintext()\n",
+    "encoder.encode(1, scale, dummy_plain)\n",
+    "x3_enc = seal.Ciphertext()\n",
+    "encryptor.encrypt(dummy_plain, x3_enc)\n",
+    "# Have to waste one level to make square_and_multiply compatible \n",
+    "# copied ciphertext\n",
+    "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
+    "evaluator.mod_switch_to_next_inplace(x3_enc)\n",
+    "square_and_multiply(x_copy, 3, evaluator, relin_keys,scale, encoder, x3_enc)\n",
+    "\n",
+    "print(\"x^3 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
+    "\n",
+    "# Finally, use the copy of x for calculations. \n",
+    "\n",
+    "print(\"x_copy chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -263,24 +320,24 @@
       "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
       "\n",
       "Original scale\n",
-      "1073741824.0\n",
+      "1099511627776.0\n",
       "Modulus switched original parms_id():\n",
       "[16690438325808200324, 16265141331075099064, 4540980657725171339, 14048225904169892080]\n",
       "Modulus switched scale: \n",
-      "1073741824.0\n",
+      "1099511627776.0\n",
       "\n",
       "Primes in the coefficient modulus chain:\n",
       "[562949952798721, 1073430529, 1073479681, 1073643521, 1073692673, 562949952847873]\n",
       "\n",
       "Copy scale\n",
-      "1073790977.2500114\n",
+      "1099561960704.0117\n",
       "Product scale:\n",
-      "1.1529742825071698e+18\n",
+      "1.208981161254238e+24\n",
       "Product scale after rescale:\n",
+      "1126054540084388.0\n",
       "1073889293.751133\n",
-      "1073889293.751133\n",
-      "-0.5999989580435499\n",
-      "-0.5999997565026448\n"
+      "-0.0005859369418990447\n",
+      "-0.0005859367152752603\n"
      ]
     }
    ],
@@ -346,12 +403,12 @@
     "decryptor.decrypt(x_copy, tmp_result)\n",
     "print(encoder.decode_double(tmp_result)[0])\n",
     "decryptor.decrypt(x_enc, tmp_result)\n",
-    "print(encoder.decode_double(tmp_result)[0])\n"
+    "print(encoder.decode_double(tmp_result)[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +419,7 @@
       "Ciphertext level after divByPo2: 4\n",
       "\n",
       "divByPo2 result: \n",
-      "-0.0005859370702856982\n",
+      "-0.0005859367152752603\n",
       "True value: \n",
       "-0.0005859375000000001\n"
      ]
@@ -379,6 +436,7 @@
     "divByPo2(x_enc, power)\n",
     "test_plain = seal.Plaintext()\n",
     "decryptor.decrypt(x_enc, test_plain)\n",
+    "# The divByPo2 does not change the level of the ciphertext.\n",
     "print(\"Ciphertext level after divByPo2: \" + str(context.get_context_data(x_enc.parms_id()).chain_index()))\n",
     "\n",
     "print(\"\\ndivByPo2 result: \")\n",
