Simplifications + CT level is examined.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,19 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "encrypted_ntt and plain_ntt parameter mismatch",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/davsv512@user.uu.se/python/SealAPI_Tutorial/comparison.ipynb Cell 11\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m encryptor\u001b[39m.\u001b[39mencrypt(dummy_plain, x7_enc)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Have to waste one level to make square_and_multiply compatible \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# copied ciphertext\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m x_copy \u001b[39m=\u001b[39m bad_copy(x_enc, scale, evaluator, encoder)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m evaluator\u001b[39m.\u001b[39mmod_switch_to_next_inplace(x7_enc)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m exponent \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m\n",
-      "\u001b[1;32m/home/davsv512@user.uu.se/python/SealAPI_Tutorial/comparison.ipynb Cell 11\u001b[0m in \u001b[0;36mbad_copy\u001b[0;34m(cipher, scale, evaluator, encoder)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m encoder\u001b[39m.\u001b[39mencode(\u001b[39m1\u001b[39m, scale, dummy_plain)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m copy \u001b[39m=\u001b[39m seal\u001b[39m.\u001b[39mCiphertext()\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m evaluator\u001b[39m.\u001b[39;49mmultiply_plain(cipher, dummy_plain, copy)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m evaluator\u001b[39m.\u001b[39mrescale_to_next_inplace(copy)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mreturn\u001b[39;00m copy\n",
-      "\u001b[0;31mValueError\u001b[0m: encrypted_ntt and plain_ntt parameter mismatch"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exponent is 4 leading to circuit with depth 2\n",
+      "Encrypted result is: 1.296019E-01\n",
+      "True result is: 1.296000E-01\n",
+      "Error is: 1.9078E-06\n"
      ]
     }
    ],
@@ -244,17 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x^7 chain_index():\t0\n",
-      "x^5 chain_index():\t0\n",
-      "x^3 chain_index():\t0\n",
-      "x_copy chain_index():\t0\n"
+      "x^7 chain_index():\t0\n"
      ]
     }
    ],
@@ -273,8 +268,6 @@
     "print(\"x^7 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
     "\n",
     "# Then x^5 \n",
-    "dummy_plain = seal.Plaintext()\n",
-    "encoder.encode(1, scale, dummy_plain)\n",
     "x5_enc = seal.Ciphertext()\n",
     "encryptor.encrypt(dummy_plain, x5_enc)\n",
     "# Have to waste one level to make square_and_multiply compatible \n",
@@ -286,8 +279,6 @@
     "print(\"x^5 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
     "\n",
     "# Now x^3\n",
-    "dummy_plain = seal.Plaintext()\n",
-    "encoder.encode(1, scale, dummy_plain)\n",
     "x3_enc = seal.Ciphertext()\n",
     "encryptor.encrypt(dummy_plain, x3_enc)\n",
     "# Have to waste one level to make square_and_multiply compatible \n",
@@ -295,6 +286,10 @@
     "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
     "evaluator.mod_switch_to_next_inplace(x3_enc)\n",
     "square_and_multiply(x_copy, 3, evaluator, relin_keys,scale, encoder, x3_enc)\n",
+    "\n",
+    "#Obviously, we expect that the level of x^7 and x^5 is the same, since both require\n",
+    "# ceil(log2(7))=ceil(log2(5))=3 multiplications. However, x^3 should be at a higher, \n",
+    "# Since we only need 2 multiplications. \n",
     "\n",
     "print(\"x^3 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
     "\n",
