Fixed typo. Now the proper CT-levels are printed.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,9 +206,9 @@
      "output_type": "stream",
      "text": [
       "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.296019E-01\n",
+      "Encrypted result is: 1.295992E-01\n",
       "True result is: 1.296000E-01\n",
-      "Error is: 1.9078E-06\n"
+      "Error is: -7.7384E-07\n"
      ]
     }
    ],
@@ -242,14 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x^7 chain_index():\t0\n"
+      "x^7 chain_index():\t0\n",
+      "x^5 chain_index():\t0\n",
+      "x^3 chain_index():\t0\n",
+      "x_copy chain_index():\t0\n"
      ]
     }
    ],
@@ -276,7 +279,7 @@
     "evaluator.mod_switch_to_next_inplace(x5_enc)\n",
     "square_and_multiply(x_copy, 5, evaluator, relin_keys,scale, encoder, x5_enc)\n",
     "\n",
-    "print(\"x^5 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
+    "print(\"x^5 chain_index():\\t\" + str(context.get_context_data(x5_enc.parms_id()).chain_index()))\n",
     "\n",
     "# Now x^3\n",
     "x3_enc = seal.Ciphertext()\n",
@@ -291,7 +294,7 @@
     "# ceil(log2(7))=ceil(log2(5))=3 multiplications. However, x^3 should be at a higher, \n",
     "# Since we only need 2 multiplications. \n",
     "\n",
-    "print(\"x^3 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
+    "print(\"x^3 chain_index():\\t\" + str(context.get_context_data(x3_enc.parms_id()).chain_index()))\n",
     "\n",
     "# Finally, use the copy of x for calculations. \n",
     "\n",
